--- a/index.html
+++ b/index.html
@@ -572,8 +572,9 @@
                     'Content-Type': 'application/json'
                 },
                 body: JSON.stringify({
-                    text: businessPlan,
-                    api_key: apiKey
+                    proposalText: businessPlan,
+                    apiKey: apiKey
+    
                 })
             });
             
